CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
#指定项目名称
PROJECT(FFComm)

#设置源文件
AUX_SOURCE_DIRECTORY(. PROJECT_SOURCE_DIR)

#指定头文件目录
INCLUDE_DIRECTORIES(./Include)
#指定链接库文件目录
#LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

#生成可执行文件
#ADD_EXECUTABLE(hello ${SOURCE})

#生成库文件
ADD_LIBRARY(FFComm SHARED ${PROJECT_SOURCE_DIR})

#链接库
#TARGET_LINK_LIBRARIES(hello myprint)
